--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		Application
+		<title>Application</titile>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	
 	<body>
